--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
-.container{
-  width: 85%;
-  margin: auto;
+
+* , *:after , *:before {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: lucida sans ;
+}
+
+.container {
+    width: 85%;
+    margin: auto;
+}
+
+.margin-bottom {
+    margin-bottom: 20px
 }
