--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+*{
+    scroll-behavior: smooth;
+
+}
 body {
     font-family: lucida sans ;
-     scroll-behavior: smooth;
 }
 .container {
     width: 85%;
